--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<ul class="icons">
 					<li><a href="https://github.com/pankajk28/" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
 					<li><a href="https://www.linkedin.com/in/pankajk28/" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-					<li><a href="mailto:pankjkr28@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="mailto:pkumar59@uwo.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 			</footer>
 		</section>
@@ -278,7 +278,7 @@
 							<ul class="icons">
 								<li><a href="https://github.com/pankajk28/" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
 								<li><a href="https://www.linkedin.com/in/pankajk28/" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto:pankjkr28@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="mailto:pkumar59@uwo.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</div>
 					</section>
