--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							</li>
 							<div>
 								<p> <b>Course: </b> CS1032 - <a href="https://www.csd.uwo.ca/misc/outlines/2018/2018-cs1032-b.pdf" target="_blank"> Information Systems and Design Course </a><br>
-								<b>Duration: </b> September 2018 - April 2018 (Fall 2018 & Winter 2019 Term) <br>
+								<b>Duration: </b> September 2018 - Present (Fall 2018, Winter 2019 and Summer 2019 Term) <br>
 								<b>Description:</b> I have conducted tutorials, held office hours, graded assignments, 
 									proctored examination period.</p>
 							</div>
