--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<header>
 				<span class="image avatar"><img src="images/me.jpg" alt="" /></span>
 				<h1 id="logo"><a href="index.html">Pankaj Kumar</a></h1>
-				<p>Actively looking for a full-time opportunity in Software Development field. </p>
+				<p>Software Developer at IBM Security </p>
 			</header>
 			<nav id="nav">
 				<ul>
