--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<h3>Here's all the work I have done.</h3>
 						</header>
 						<ul>
-							<li> Software Developer, QRadar - SIEM - IBM Security </li>
+							<li>    <h4> Software Developer, QRadar - SIEM - IBM Security </h4> </li> <br/>
 							<li>
 								<h4>Graduate Teaching Assistant - <a href="http://www.csd.uwo.ca/" target="_blank"><i>Western University </i></a> </h4>
 							</li>
