--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			</nav>
 			<footer>
 				<ul class="icons">
-					<li><a href="https://github.com/pankajk28/" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
+					<li><a href="https://github.com/tehdeveloper/" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
 					<li><a href="https://www.linkedin.com/in/pankajk28/" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 					<li><a href="mailto:pkumar59@uwo.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
@@ -332,7 +332,7 @@
 								<h3>Let's Connect..</h3>
 							</header>
 							<ul class="icons">
-								<li><a href="https://github.com/pankajk28/" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
+								<li><a href="https://github.com/tehdeveloper/" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
 								<li><a href="https://www.linkedin.com/in/pankajk28/" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:pkumar59@uwo.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
