--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
 						<header class="major">
 							<h2>About me</h2>
 						</header>
-						<p>I am recent Master's in computer science gradute from
-							<a href="http://www.csd.uwo.ca/" target="_blank"> The University of Western Ontario</a>, London, Ontario. 
-							Currently, I am actively looking for a full-time opportunity. I have interest in software engineering, development or consultant position.
-							<br><br>
-							I have a three years of work experience as a full-stack developer at <a href="https://www.crimsonlogic.com/" target="_blank"> CrimsonLogic </a>.
+						
+						
+						<p> Hello there! First, I would like to thank you for visiting my portfolio. 
+						</p><p>My name is Pankaj and I am a software developer at IBM Canada Ltd. I live in New Brunswick, Canada.
 						</p>
 					</div>
 				</section>
