--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!-- Header -->
 		<section id="header">
 			<header>
-				<span class="image avatar"><img src="images/me.jpg" alt="" /></span>
+				<span class="image avatar"><img src="images/me.JPG" alt="" /></span>
 				<h1 id="logo"><a href="index.html">Pankaj Kumar</a></h1>
 				<p>Software Developer at IBM Security </p>
 			</header>
