--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<section id="header">
 			<header>
 				<span class="image avatar"><img src="images/pankaj.jpg" alt="" /></span>
-				<h1 id="logo"><a href="index.html">Pankaj Kumar</a></h1>
+				<h1 id="logo"><a href="index.html">Pankaj Kumar (he/him)</a></h1>
 				<p>Software Developer at IBM Security </p>
 			</header>
 			<nav id="nav">
@@ -49,7 +49,7 @@
 						
 						
 						<p> Hello there! First, I would like to thank you for visiting my portfolio. 
-						</p><p>My name is Pankaj and I am a software developer at IBM Canada Ltd. I live in New Brunswick, Canada.
+						</p><p>My name is Pankaj (Punk-uj) and I am a software developer at IBM Canada Ltd. I live in New Brunswick, Canada.
 						</p>
 					</div>
 				</section>
