--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						</header>
 						
 						
-						<p> Hello there! First, I would like to thank you for visiting my portfolio. 
+						<p> Hello there! I would like to thank you for visiting my portfolio. 
 						</p><p>My name is Pankaj (Punk-uj) and I am a software developer at IBM Canada Ltd. I live in New Brunswick, Canada.
 						</p>
 					</div>
@@ -98,7 +98,7 @@
 									<li>Managed workload to ensure all customer issues are resolved in a timely manner.</li>
 									<li>Initiated and led the adoption of Team Foundation Server Git from Apache Subversion.</li>
 									<li>Worked with the testing team to implement automation testing using Selenium.</li>
-									<li>Implemented e-stamping web application features into Excel using VBA. </li>li>
+									<li>Implemented e-stamping web application features into Excel using VBA. </li>
 									<li>Implemented Satellite Communication Station Licence for LicenceOne.</li>
 								</ul>
 							</div>
